arm64_base_dict = {
    '?sum': {
        's': {
            '_k': 'arm64/sum.S',
        },
        'd': {
            '_k': 'arm64/sum.S',
        },
        'c': {
            '_k': 'arm64/csum.S'
        },
        'z': {
            '_k': 'arm64/zsum.S',
        },
    },
    '?nrm2': {
        's': {
            '_k': 'arm/nrm2.c',
        },
        'd': {
            '_k': 'arm/nrm2.c',
        },
        'c': {
            '_k': 'arm/znrm2.c',
        },
        'z': {
            '_k': 'arm/znrm2.c',
        },
    },
    '?cabs': {
        's': {
            '1': 'generic/cabs.c',
        },
        'd': {
            '1': 'generic/cabs.c',
        },
    },
    '?lsame': {
        '': {
            '': 'generic/lsame.c',
        }
    },
    '?gemm': {
        's': {
            '_beta': 'generic/gemm_beta.c',
        },
        'd': {
            '_beta': 'generic/gemm_beta.c',
        },
        'c': {
            '_beta': 'generic/zgemm_beta.c',
        },
        'z': {
            '_beta': 'generic/zgemm_beta.c',
        },
    },
}

subdir('meson_armv8')
